# async-order-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7ab65242c3dd_initial_models.py
app/: celery.py  main.py
app/api/v1/: orders.py
app/core/: config.py  database.py  logger.py
app/models/: __init__.py  order.py  outbox.py  product.py  user.py
app/schemas/: order.py  product.py  user.py
app/services/: order_service.py  outbox_service.py  payment_service.py
app/tasks/: order_tasks.py  outbox_tasks.py  payment_tasks.py
app/utils/: rabbit.py
scripts/: init_db.py
tests/: conftest.py
tests/integration/: test_outbox_rabbit.py
tests/test_api/: test_orders.py  test_sql_stats.py
tests/test_tasks/: test_order_tasks.py
